--- a/packages/prometheus-consul/PKGBUILD
+++ b/packages/prometheus-consul/PKGBUILD
@@ -43,6 +43,8 @@ package() {
 
   install -Dm644 "${srcdir}"/consul.service \
     "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
+  install -Dm644 "${srcdir}"/prometheus.sysusers \
+    "${pkgdir}"/usr/lib/sysusers.d/carbonio-prometheus-consul-exporter.conf
   install -Dm644 "${srcdir}"/consul.default \
     "${pkgdir}/etc/default/${pkgname}"
 }
