--- a/packages/prometheus-node/PKGBUILD
+++ b/packages/prometheus-node/PKGBUILD
@@ -43,6 +43,8 @@ package() {
 
   install -Dm644 "${srcdir}"/node.service \
     "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
+  install -Dm644 "${srcdir}"/prometheus.sysusers \
+    "${pkgdir}"/usr/lib/sysusers.d/carbonio-prometheus-node-exporter.conf
   install -Dm644 "${srcdir}"/node.default \
     "${pkgdir}/etc/default/${pkgname}"
 }
