--- a/packages/prometheus-node/node.service
+++ b/packages/prometheus-node/node.service
@@ -4,8 +4,8 @@ Wants=network-online.target
 After=network.target
 
 [Service]
-User=prometheus
-Group=prometheus
+User=carbonio-prometheus
+Group=carbonio-prometheus
 Type=simple
 EnvironmentFile=/etc/default/carbonio-prometheus-node-exporter
 ExecStart=/opt/zextras/common/bin/carbonio-prometheus-node-exporter $ARGS
