--- a/packages/prometheus/prometheus.yml
+++ b/packages/prometheus/prometheus.yml
@@ -59,6 +59,14 @@ scrape_configs:
       - files:
           - "/opt/zextras/common/etc/prometheus/inventory/process.yml"
 
+  - job_name: consulservices
+    consul_sd_configs:
+        - server: 'consul-server-host:8500'
+        - token: 'consul-bootstrap-token'
+    relabel_configs:
+      - source_labels: [ __meta_consul_address, __meta_consul_service_metadata_prom_port]
+        separator: ":"
+        target_label: __address__
   # - job_name: thanos
   # file_sd_configs:
   # - files:
