--- a/packages/prometheus-postgres/postgres_exporter.service
+++ b/packages/prometheus-postgres/postgres_exporter.service
@@ -9,7 +9,7 @@ Group=carbonio-prometheus
 Type=simple
 Environment=SSL_VERIFY=false
 EnvironmentFile=/etc/default/carbonio-prometheus-postgres-exporter
-ExecStart=/opt/zextras/common/bin/carbonio-prometheus-postgres-exporter $ARGS
+ExecStart=/opt/zextras/common/bin/carbonio-prometheus-postgres-exporter
 Restart=always
 
 [Install]
