--- a/packages/grafana-settings/carbonio-dashboards.yml
+++ b/packages/grafana-settings/carbonio-dashboards.yml
@@ -1,6 +1,6 @@
 apiVersion: 1
 providers:
- - name: 'default'
+ - name: 'Carbonio'
    type: file
    options:
      path: /etc/grafana/provisioning/dashboards
