--- a/packages/grafana-settings/PKGBUILD
+++ b/packages/grafana-settings/PKGBUILD
@@ -15,14 +15,18 @@ section="mail"
 priority="optional"
 arch="amd64"
 sources=(
-  "AllMailboxProtocolsRequests.json"
-  "CarbonioDocs.json"
-  "MailstoreDetails.json"
-  "MariaDB.json"
-  "NodeExporterFull.json"
-  "Openldap.json"
-  "PostfixQueues.json"
-  "Process.json"
+  "carbonio-dashboards.yml"
+  "carbonio-directory-server.json"
+  "carbonio-docs.json"
+  "carbonio-mailbox-procols.json"
+  "carbonio-mailstore-details.json"
+  "carbonio-mariadb.json"
+  "carbonio-node.json"
+  "carbonio-postfix.json"
+  "carbonio-process.json"
+  "carbonio-prometheus.yml"
+  "carbonio.json"
+  "grafana.ini"
 )
 hashsums=(
   "skip"
@@ -37,8 +41,10 @@ depends=(
 )
 
 package() {
-  install -Dm644 "${srcdir}"/promethus.yml \
-    "/etc/grafana/provisioning/datasources/"
+  install -Dm644 "${srcdir}"/carbonio-prometheus.yml \
+    "/etc/grafana/provisioning/datasources/"  
+  install -Dm644 "${srcdir}"/carbonio-dashboards.yml \
+    "/etc/grafana/provisioning/dashboards/"
   install -Dm644 "${srcdir}"/carbonio-directory-server.json \
     "/etc/grafana/provisioning/dashboards/carbonio-directory-server.json"
   install -Dm644 "${srcdir}"/carbonio-docs.json \
@@ -56,7 +62,9 @@ package() {
   install -Dm644 "${srcdir}"/carbonio-process.json \
     "/etc/grafana/provisioning/dashboards/carbonio-process.json"
   install -Dm644 "${srcdir}"/carbonio.json \
-    "/etc/grafana/provisioning/dashboards/carbonio.json"
+    "/etc/grafana/provisioning/dashboards/carbonio.json"  
+  install -Dm644 "${srcdir}"/grafana.ini \
+    "/etc/grafana/grafana.ini"
 }
 
 postinst() {
