--- a/packages/prometheus-postgres/PKGBUILD
+++ b/packages/prometheus-postgres/PKGBUILD
@@ -45,7 +45,7 @@ package() {
 
   install -Dm644 "${srcdir}"/postgres_exporter.service \
     "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
-  install -Dm644 "${srcdir}"/${pkgname}.default \
+  install -Dm644 "${srcdir}"/postgres_exporter.default \
     "${pkgdir}/etc/default/${pkgname}"
   install -Dm644 "${srcdir}"/postgres_exporter.yml \
     "${pkgdir}/opt/zextras/common/etc/prometheus/${pkgname}.yml"
