--- a/packages/prometheus-process/PKGBUILD
+++ b/packages/prometheus-process/PKGBUILD
@@ -19,9 +19,11 @@ sources=(
   "process.default"
   "process.service"
   "process.yml"
+  "process-consul.json"
   "prometheus.sysusers"
 )
 hashsums=(
+  "skip"
   "skip"
   "skip"
   "skip"
@@ -57,6 +59,8 @@ package() {
     "${pkgdir}/etc/default/${pkgname}"
   install -Dm644 "${srcdir}"/process.yml \
     "${pkgdir}/opt/zextras/common/etc/prometheus/${pkgname}.yml"
+  install -Dm644 "${srcdir}"/process-consul.json \
+    "${pkgdir}/etc/zextras/service-discover/${pkgname}.json"		
 }
 
 postinst() {
